17 Feb 2005: Wouter
	- rbtree_delete is added and works. Unit tests are there too.
	- Changed tail recursion in rbtree_delete to while loop.
	- Tagged this version as NSD_3_signalsocket_solution.
	  It is the stable 2_2 branch with cleanups, portable, and
	  signalhandler solution by socket communication redesign.

15 Feb 2005: nsd-team
   * Wouter: Fixed server_child would wait for two kill signals before quit.
   * Miek: don't check for port==0 pkt, just try to send them. 
	Forward Port of 2.3.
   * Wouter: Removed unused, not substituted, @nsdxfer@ from Makefile.in.

14 Feb 2005: Wouter
	- Added unit tests for rbtree. Extensive testing of all functions.
	- Added tpkg unit test.
	- configure tests for CUnit(optional lib for unit tests). Makefile
	  cleanup so it works on non-gmake on freebsd.

13 Feb 2005: Wouter
	- Removed timespec_add(current_time) in server_main, the timeout was
	  relative, not absolute. This fixes EINVAL on the timeout on freebsd.
	- Added check in configure for compiler flags. Used for -Wextra.
	- Added check in configure for va_list definition conflict between
	  stdio and stdarg. This happens on DEC Alpha/Debian.
	- removed --enable-mmap configure option. There is no mmap support
	  in the current codebase.
	- renamed local prev to next in domain_next() in namedb.h.
	- Removed heap.h. It was not used. Heap and rbtree are mingled anyway.
	- in netio.c, in dispatch, it would store the next pointer 'in case
	  the handler removes itself'. But if the handler removes that next.
	  Then it would fail. So stored the next in struct netio.
	  This removes a potential bug. Netio_dispatch is not reentrant.
	  Reentry would need a list of iterator* in struct netio.
	- Changed process_query() to server_process_query(). It is too 
	  similar to query_process().

10 Feb 2006: nsd-team
   * Wouter: Improved configure.ac to detect pselect in sys/select.
	The check works on freebsd(yes) and fedoracore 3 and 4 (no).
	I hope it also works on Solaris.